@@ -1,3 +1,8 @@
+2006-12-02  Stipe Tolj  <stolj at kannel.org>
+    * gw/smsc/smpp_pdu.c: moving 'Unknown TLV' output to WARNING for the sake
+      of log-file readability. User's may switch to appropriate log-level in
+      case their SMPP SMSC uses a lot of vendor-specific TLVs. NLC.
+      
 2006-12-01  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/smsc_emi.c: some updates of references in comments. NLC.
       Thanks to Vincent for providing a patch.
